fix: z-index header

--- a/semana15/P015/src/app/header/header.component.css
+++ b/semana15/P015/src/app/header/header.component.css
@@ -4,6 +4,7 @@
   background-color: var(--primary-color);
   padding: 10px 30px;
   position: fixed;
+  z-index: 1000;
 }
 .menu {
   display: flex;
